--- a/api/home/models/home.settings.json
+++ b/api/home/models/home.settings.json
@@ -64,6 +64,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "Home_Description_Title": {
+      "type": "string"
     }
   }
 }
