--- a/api/services-page/models/services-page.settings.json
+++ b/api/services-page/models/services-page.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "services_pages",
   "info": {
-    "name": "Services Page"
+    "name": "Services Page",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -28,6 +29,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "Shot_Description": {
+      "type": "richtext"
     }
   }
 }
