--- a/api/home/models/home.settings.json
+++ b/api/home/models/home.settings.json
@@ -67,6 +67,9 @@
     },
     "Home_Description_Title": {
       "type": "string"
+    },
+    "Footer_Text": {
+      "type": "richtext"
     }
   }
 }
